added new profile, navbar brand config and updated skills section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <body>
     <header>
       <div class="logo">
-        <img src="img/devjane.png" alt="" />
+        <img src="img/bendev.png" alt="" />
+        <!-- <h4 ><ben.dev></h4> -->
       </div>
       <button class="button nav-toggle" aria-label="toggle navigation">
         <span class="hamburger"></span>
@@ -53,7 +54,7 @@
         Hi, I am <strong>Benard</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">software-dev</p>
-      <img src="img/dev-jane-01.jpg" alt="main picture" class="intro__img" />
+      <img src="img/Mepic.jpg" alt="main picture" class="intro__img" />
     </section>
 
     <!-- My Services -->
@@ -63,28 +64,23 @@
         <div class="service">
           <h3>Front-end Development</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            My area of expertise in this context is vanilla Javascript, React
+            and Angular 4+, all of which i have professional experience working
+            with.
           </p>
         </div>
         <div class="service">
           <h3>Design</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            I have personal experience designing user interfaces and working
+            with various UI/UX tools specifically adobe Photoshop and adobe XD.
           </p>
         </div>
         <div class="service">
           <h3>Back-end Development</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            My skills in this regard include back-end development using C# in
+            ASP.net-core MVC. This has also involved using Entity framework.
           </p>
         </div>
       </div>
@@ -100,20 +96,18 @@
 
       <div class="about-me__body">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
+          I am a dynamic, motivated and well-grounded software engineer with a
+          passion for all things tech! I hold an undergraduate degree majoring
+          in pure Mathematics and Computer Science (cum laude) as well as an
+          Honours degree in Computer Science (cum laude). I have extensive
+          software development experience, with a focus on full-stack web
+          application development and occasionally delve into A.I, my expertise
+          in this regard is computer vision specifically image processing, and
+          field and character extraction using neural networks.
         </p>
       </div>
       <img
-        src="img/dev-jane-02.jpg"
+        src="img/me1.JPG"
         alt="Jane leaning against a bus"
         class="about-me__img"
       />
