--- a/index.html
+++ b/index.html
@@ -178,12 +178,18 @@
       <a href="#" class="footer__link">hello@ben.dev</a>
       <ul class="social-list">
         <li class="social-list__item">
-          <a href="#" class="social-list__link">
+          <a
+            href="https://github.com/benardcharumbira?tab=repositories"
+            class="social-list__link"
+          >
             <i class="fab fa-github"></i>
           </a>
         </li>
         <li class="social-list__item">
-          <a href="#" class="social-list__link">
+          <a
+            href="https://www.linkedin.com/in/benard-charumbira-62a77711b/"
+            class="social-list__link"
+          >
             <i class="fab fa-linkedin"></i>
           </a>
         </li>
