--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
       </button>
       <nav class="nav">
         <ul class="nav__list">
-          <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+          <li class="nav__item">
+            <a href="#home" class="nav__link">Home</a>
+          </li>
           <li class="nav__item">
             <a href="#services" class="nav__link">My Services</a>
           </li>
@@ -122,13 +124,13 @@
         A selection of my personal projects
       </p>
 
-      <!-- Portfolio item 01 -->
       <div class="row">
+        <!-- Portfolio item 01 -->
         <div class="col-xs-12 col-md-4">
           <div class="card">
             <img src="./img/p2.png" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Covid-19 Static Tracker</h5>
+              <h5 class="card-title">Covid-19 Statistic Tracker</h5>
               <p class="card-text">
                 <i class="fab fa-css3-alt"></i>
                 <i class="fab fa-react"></i>
@@ -147,6 +149,7 @@
             </div>
           </div>
         </div>
+        <!-- Portfolio item 02 -->
         <div class="col-xs-12 col-md-4">
           <div class="card">
             <img src="./img/p1.png" class="card-img-top" alt="..." />
@@ -169,6 +172,7 @@
             </div>
           </div>
         </div>
+        <!-- Portfolio item 03 -->
         <div class="col-xs-12 col-md-4">
           <div class="card">
             <img src="./img/p3.png" class="card-img-top" alt="..." />
