--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
         <p>
           I am a dynamic, motivated and well-grounded software engineer with a
           passion for all things tech! I hold an undergraduate degree majoring
-          in pure Mathematics and Computer Science (cum laude) as well as an
-          Honours degree in Computer Science (cum laude). I have extensive
+          in pure Mathematics and Computer Science (cum laude). I have extensive
           software development experience, with a focus on full-stack web
           application development and occasionally delve into A.I, my expertise
           in this regard is computer vision specifically image processing, and
@@ -193,6 +192,7 @@
           </div>
         </div>
       </div>
+      <p class="footer__link"><a href="https://github.com/benardcharumbira?tab=repositories">more projects</a></p>
     </section>
 
     <!-- footer -->
@@ -207,14 +207,14 @@
             <i class="fab fa-github"></i>
           </a>
         </li>
-        <li class="social-list__item">
+        <!-- <li class="social-list__item">
           <a
             href="https://www.linkedin.com/in/benard-charumbira-62a77711b/"
             class="social-list__link"
           >
             <i class="fab fa-linkedin"></i>
           </a>
-        </li>
+        </li> -->
       </ul>
     </footer>
 
